# gpfs-stub

./: .gitignore  Makefile.am  README.md  configure.ac
include/: gpfs.h  gpfs_fcntl.h
src/: libgpfs.c
